Replace Schema with Schema.type when deciding if Fuzzer will run based on data type