@@ -8,11 +8,9 @@ import com.endava.cats.io.ServiceCaller;
 import com.endava.cats.model.FuzzingData;
 import com.endava.cats.report.TestCaseListener;
 import com.endava.cats.util.CatsUtil;
-import io.swagger.v3.oas.models.media.IntegerSchema;
 import io.swagger.v3.oas.models.media.Schema;
 
 import javax.inject.Singleton;
-import java.util.Collections;
 import java.util.List;
 
 @Singleton
@@ -24,8 +22,8 @@ public class IntegerFieldsRightBoundaryFuzzer extends BaseBoundaryFieldFuzzer {
     }
 
     @Override
-    public List<Class<? extends Schema>> getSchemasThatTheFuzzerWillApplyTo() {
-        return Collections.singletonList(IntegerSchema.class);
+    public List<String> getSchemaTypesTheFuzzerWillApplyTo() {
+        return List.of("integer");
     }
 
     @Override
