@@ -6,12 +6,9 @@ import com.endava.cats.fuzzer.fields.base.ExactValuesInFieldsFuzzer;
 import com.endava.cats.io.ServiceCaller;
 import com.endava.cats.report.TestCaseListener;
 import com.endava.cats.util.CatsUtil;
-import io.swagger.v3.oas.models.media.IntegerSchema;
-import io.swagger.v3.oas.models.media.NumberSchema;
 import io.swagger.v3.oas.models.media.Schema;
 
 import javax.inject.Singleton;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -34,8 +31,8 @@ public class MinimumExactNumbersInNumericFieldsFuzzer extends ExactValuesInField
     }
 
     @Override
-    public List<Class<? extends Schema>> getSchemasThatTheFuzzerWillApplyTo() {
-        return Arrays.asList(NumberSchema.class, IntegerSchema.class);
+    public List<String> getSchemaTypesTheFuzzerWillApplyTo() {
+        return List.of("number", "integer");
     }
 
     @Override
